# emerg_shutdown

./: .gitignore  README.md  TODO.md  docker-compose.yaml  pyproject.toml  run.py
app/: main.py
app/api/: api.py  css_api.py  emerg_api.py
app/bot/: bot.py
app/config/: config.py  db_setup.py  test_environment.py
app/gadget/: gadget.py
app/models/: bot_models.py  css_models.py  db_models.py  emerg_models.py
app/services/: bot_svc.py  cucm.py  db_svc.py  gadget_svc.py  helpers.py
app/templates/css/: css_detail.j2  css_list.j2
app/templates/emerg/: emerg.j2  emerg_all_detail.j2  emerg_detail.j2
app/templates/gadget/: gadget_status.xml  hello_world.xml
app/templates/home/: index.j2
app/templates/shared/: layout.j2
app/views/: css_views.py  emerg_views.py  home_views.py  views.py
